# HOTEL-ERP

./: .gitignore  API_DOCUMENTATION.md  CODE_SCAN_REPORT_V14_TO_V15.md  CONTRIBUTING.md  DOCS_INDEX.md  MIGRATION_ANALYSIS_V14_TO_V15.md  MIGRATION_GUIDE.md  README.md  SPRINT_0.md  SPRINT_0_FINAL_REPORT.md  SPRINT_0_SUMMARY.txt  SPRINT_1.md  TESTING_CHECKLIST.md  fix_workspace_widgets.py  pyproject.toml  requirements.txt  setup.py
hotel_management/: fix_dashboards.py  fix_dashboards.py.save  fix_workspace.py  fix_workspace_widgets.py  hooks.py  install.py  setup_workspace.py  test_mvp.py  workspace_definition.json
hotel_management/config/: desktop.py
hotel_management/doctype/property/: property.json  property.py  test_property.py
hotel_management/hotel_management/: custom_fields.py  dashboard_api.py
hotel_management/hotel_management/doctype/guest/: guest.js  guest.json  guest.py
hotel_management/hotel_management/doctype/housekeeping_task/: housekeeping_task.js  housekeeping_task.json  housekeeping_task.py
hotel_management/hotel_management/doctype/maintenance_request/: maintenance_request.js  maintenance_request.json  maintenance_request.py
hotel_management/hotel_management/doctype/owner/: owner.js  owner.json  owner.py
hotel_management/hotel_management/doctype/owner_settlement/: owner_settlement.js  owner_settlement.json  owner_settlement.py
hotel_management/public/js/: dashboard_widgets.js
hotel_management/tests/: run_sprint1_tests.py  test_mvp.py  test_sprint1.py
hotel_management/translations/: ar.csv
testsprite_tests/tmp/: config.json
(+50 files in other folders)
